Теперь при расчете длительности и стоимость учитываются доп услуги